--- a/src/index.css
+++ b/src/index.css
@@ -81,3 +81,44 @@ li {
   font-size: 15px;
   height: 100px;
 }
+
+.user, .question, .result, .answer {
+  width: 100%;
+  max-width: 590px;
+  padding: 10px;
+  display: flex;
+  margin: 0 auto;
+  border: 1px solid #dad7d7;
+  border-radius: 3px;
+}
+
+.user-info, .question-info, .result-info, .answer-info {
+  margin: 10px;
+  width: 100%
+}
+
+.new-question {
+  width: 100%;
+  max-width: 590px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.textarea {
+  border-radius: 4px;
+  border: 1px solid #dad7d7;
+  padding: 10px;
+  font-size: 15px;
+  height: 25px;
+}
+
+.sign-in {
+  width: 100%;
+  max-width: 590px;
+  padding: 10px;
+  /* display: flex; */
+  /* margin: 0 auto; */
+  border: 1px solid #dad7d7;
+  border-radius: 3px;
+}
